production-go-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-go-app
  labels:
    app: production-go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: production-go-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: production-go-app
    spec:
      containers:
        - name: app
          image: 627002024306.dkr.ecr.ap-south-1.amazonaws.com/production-go-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              cpu: "250m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
